--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -59,8 +61,6 @@
                     <div id="theme-options-wrapper">
                         <div data-mode="light" id="light-mode" class="theme-dot"></div>
                         <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
-                        <!-- <div data-mode="green" id="green-mode" class="theme-dot"></div> -->
-                        <!-- <div data-mode="purple" id="purple-mode" class="theme-dot"></div> -->
                     </div>
 
                     <p id="settings-note">*Theme settings will be saved for<br>your next vist</p>
@@ -90,17 +90,10 @@
 
             <div class="about-wrapper">
                 <div class="about-me">
-                    <!-- <h4>More About Me</h4>
-
-                    <p>I am an aspiring software developer, a passionate programmer who loves to solve algorithmic
-                        problems. I have a sound knowledge of Data Structures and Algorithms, i am also into backend
-                        development and have good grasp on MERN Stack.</p>
-
-                    <p>I am also a fitness enthusiast and love playing Badminton, Cricket, Volleyball.</p> -->
 
                     <h4>Skills</h4>
                     <h6><u>Advanced</u></h6>
-                    <div id="skills">
+                    <div class="skills">
                         <div class="skill-name">
                             <div class="skill-icon"><i class="far fa-file-code fa-3x"></i></div>
                             C++
@@ -119,7 +112,7 @@
                         </div>
                     </div>
                     <h6><u>Intermidiate</u></h6>
-                    <div id="skills">
+                    <div class="skills">
                         <div class="skill-name">
                             <div class="skill-icon"><i class="fab fa-js fa-3x"></i></div>
                             JavaScript
@@ -156,7 +149,7 @@
                     </div>
 
                     <h6><u>Familiar</u></h6>
-                    <div id="skills">
+                    <div class="skills">
                         <div class="skill-name">
                             <div class="skill-icon"><i class="fab fa-react fa-3x"></i></div>
                             ReactJS
@@ -226,7 +219,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
